2017-05-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* syslog-graph.sh: Created.

2016-07-24  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* update-all.sh: Created.

2016-07-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* Makefile: Created.
	* README.md: Document rcmd-dump
	* rcmd-dump.c: Created.

2016-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* compress-pdf.sh: Better handling of filenames containing spaces.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* COPYING: Created.
	* README.pdf: Updated general text and details of compress-pdf.sh
	* compress-pdf.sh: Created.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.pdf: Created.